overflow issue fixed

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -73,6 +73,10 @@ body {
   @media screen and (max-width: 780px) {
     margin-top: -5rem;
   }
+
+  &.filterMap {
+    margin-top: 0;
+  }
 }
 
 .svg-container {
